--- a/styles/base.css
+++ b/styles/base.css
@@ -73,6 +73,7 @@ p {
 
 main {
     display: flex;
+    max-width: 100%;
 
 }
 
@@ -146,7 +147,7 @@ main {
     /* grid-row-height */
 }
 
-.card:nth-child(1) div:nth-child(3) h2 {
+.card:nth-child(1) div:nth-child(3) h1 {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     justify-self: center;
