w02 temple viewer ios mobile vp improvements

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -86,13 +86,15 @@
 
     figure {
         /* margin: 1em, 1em, 1em, 1em; */
-        margin: auto;
+        margin: 1;
         text-align: left;
     }
 
     figure img {
-        max-width: 90%; /* Allow the image to take full width of its container on smaller screens */
+        max-width: 100%;
+        /* Allow the image to take full width of its container on smaller screens */
     }
+
     /* 
     .show-menu a::before {
         display: unset;
