W03 Update meta and fix svg

--- a/styles/place-mobile.css
+++ b/styles/place-mobile.css
@@ -74,6 +74,10 @@
     }
 
 
+    .place-stat-weather div img {
+        display: unset;
+    }
+
     .weather div div h2::after {
         display: none;
     }
