--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+US+Trad:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+US+Trad:wght@100..400&display=swap');
 
 :root {
     text-align: center;
@@ -40,9 +41,9 @@ main {
     padding: 2em 0;
 }
 
-.place-head h1 span:nth-child(1), .place-head h1 span:nth-child(3)  {
+.place-head h1 span:nth-child(1),
+.place-head h1 span:nth-child(3) {
     color: var(--secondary-color)
-
 }
 
 .place-hero {
@@ -119,8 +120,9 @@ main {
     margin-bottom: 2em;
 }
 
-
-
+.place-stat-weather div img {
+    display: none
+}
 
 .weather div div h2::after {
     content: " ⛅";
