--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -136,7 +136,7 @@ table {
     /* max-width: 35em; */
     /* min-width: 20em;
      */
-    font-size: auto;
+    /* font-size: 1rem; */
     padding: 1em;
     /* background-color: var(--secondary-color); */
 }
@@ -152,7 +152,7 @@ table th:nth-child(1) {
 table th:nth-child(2) {
     text-align: left;
     margin-left: 1em;
-    font-weight: 200px;
+    font-weight: 300;
 }
 
 footer {
