--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -49,6 +49,19 @@ a:visited {
     color: var(--secondary-font-color);
 }
 
+
+/* image style */
+img {
+    object-fit: cover;
+    /* shadow */
+    border-radius: 3px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+img:hover {
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.4);
+}
+
 header {
     display: flex;
     flex-direction: column;
@@ -72,6 +85,12 @@ header {
     display: flex;
     /* justify-content: space-around; */
 }
+
+.sublineshero {
+    margin-top: 7vh;
+}
+
+
 
 .sl1 {
     padding-top: 5rem;
@@ -155,18 +174,32 @@ nav {
     /* top and bottom margin */
 }
 
-.navigation li {
+.navigation a {
     /* padding controls nav button height */
     padding: .25vw 1.75vw;
     border: solid .1px var(--accent-color);
     border-radius: 16px;
     margin: .10rem 1rem;
     background-color: var(--accent-color);
+    display: block;
 }
 
-.navigation li:hover {
-    background-color: var(--accent-hover);
+
+
+.navigation a:hover,
+.navigation a {
+    cursor: grab;
 }
+
+
+
+.navigation a:hover {
+    background-color: var(--accent-hover);
+
+
+}
+
+.navigation ul {}
 
 main {
     width: 100%;
@@ -182,56 +215,107 @@ section {
 }
 
 .project section {
-    min-height: 750px;
+    min-height: 55vh;
 }
 
 section div {
     /* padding: 5rem; */
-    width: 100%;
+    /* width: 100%; */
 }
 
 
 /* ------------------ */
 /* Hero Section */
 
-.hero {
-    background-color: var(--primary-font-color);
-    padding-bottom: 6rem;
-}
 
-.hero div {
+
+.hero {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    background-color: var(--primary-font-color);
+    /* padding-bottom: 5vw; */
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .hero h1 {
     font-size: var(--title-font-size);
     font-family: var(--tertiary-font);
     color: var(--background-font-color);
-    padding: 3rem 0;
+    padding: 1rem 0;
     line-height: 0;
+    text-align: center;
 }
 
-/* image style */
-img {
-    object-fit: cover;
-    /* shadow */
-    border-radius: 3px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
-}
+/* 
+.hero-start {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 4fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding-bottom: 5vw;
 
+    background-color: var(--primary-font-color);
+
+} */
 
 .hero-start {
-    height: 20rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+
+    background-color: var(--grid-background-color);
+    padding: 1rem;
+    max-width: 1000px;
     justify-content: center;
-    /* padding: 4rem; */
+
+
+}
+
+.hero-image {
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+    object-fit: cover;
+
+}
+
+
+.hero-child {
+    padding: 1rem;
+    grid-column: 2 / 3;
+    align-self: start;
+    justify-self: start;
+    row-gap: 0;
+
+}
+
+.hero-image img {
+    width: 45vw;
+    height: auto;
+}
+
+.hero-child img {
+    width: 10vw;
+}
+
+.hero-child:nth-child(2) {
+    grid-row: 1 / 2;
+}
+
+.hero-child:nth-child(3) {
+    grid-row: 2 / 3;
+}
+
+.hero-child:last-child {
+    grid-row: 3 / 4;
+
 }
 
 .hero-start .hero-image {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    object-fit: stretch;
+    /* grid-column: 1 / 3; */
+    /* grid-row: 1 / 2; */
+    /* object-fit: stretch; */
     /* padding-left: 6rem; */
 }
 
@@ -245,13 +329,17 @@ img {
     display: block;
 }
 
-.image-beauty {
-    border-radius: 6px;
-}
-
 /* ------------------ */
 /* Family Plans */
 
+
+.sectionstarter {
+    width: 15.6vw;
+}
+
+.sectionstarter h2 {
+    margin-left: .3rem;
+}
 
 .family-plans {
     height: 20rem;
@@ -266,7 +354,8 @@ img {
 
 .family-plans h1 {
     font-size: var(--tertiary-font-size);
-    padding: 2rem 0;
+    padding: 0 0 0 0;
+    margin: 10px 0 0 0;
 }
 
 /* ------------------ */
@@ -285,7 +374,6 @@ img {
 }
 
 .budget-form-start {
-
     padding: 4rem 1rem 0 2rem;
     align-self: baseline;
     flex: 1;
