--- a/project/styles/project-mobile.css
+++ b/project/styles/project-mobile.css
@@ -1,164 +1,21 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 550px) {
 
-    :root {
-        --primary-font-size: 1.2vw;
-        --primary-font-size-small: .75vw;
-        --primary-font-size-large: 1.5vw;
-    }
+.footer {
 
-    header,
-    footer {
-        width: 100%;
-    }
+}
 
+.slhero {
+    padding-bottom: 35rem;
+}
 
-    /* ------------------ */
-    /* Hero */
+.hero{
+padding-bottom: 35vh;
+}
 
-    .hero-start {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 4fr 2fr;
-        max-height: 30rem;
-        max-width: 21vw;
-        /* center grid content*/
-        justify-content: center;
-
-    }
-
-    .hero-image {
-        display: flex;
-        grid-column: 1 / 4;
-        grid-row: 1 / 2;
-        justify-content: center;
-
-    }
-
-    .hero-image img {
-        width: 70vw;
-    }
-
-    .hero-child img {
-        width: 20vw;
-    }
-
-    .hero-child {
-        padding: 1rem;
-        grid-row: 3 / 4;
-        margin: auto;
-    }
-
-    .hero-child:nth-child(2) {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-    }
-
-    .hero-child:nth-child(3) {
-        grid-column: 2 / 3;
-        grid-row: 3 / 4;
-    }
-
-    .hero-child:last-child {
-        grid-column: 3 / 4;
-        grid-row: 3 / 4;
-    }
-
-    .family-plans iframe {
-        width: 90vw;
-        height: 200vw;
-    }
-
-    .family-plans h1 {
-        font-size: 3rem;
-    }
-
-    .budgets {
-        width: 100%;
-    }
-
-    .budget {
-        /* display: flex; */
-        flex-direction: column;
-        /* justify-content: center; */
-        /* align-items: center; */
-        width: 100%;
-
-    }
-
-
-    .budget-table-start {
-        flex: 1;
-        order: 1;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        margin-top: 3rem;
-        justify-content: center;
-
-
-    }
-
-    /* .budget-table{
-
-    } */
-
-    .budget-form-start {
-        flex: 1;
-        order: 2;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-    }
-
-    .budget-form-start div {
-        width: 80%;
-    }
-
-    .budget-form {
-        padding: 2rem 5rem;
-
-    }
-
-
-    /* fieldset {
-        /* border: solid 1px var(--secondary-color);
-    margin: 1rem .75rem 0;
-    } */
-
-    /* ------------------ */
-    /* Gallery */
-
-    .gallery {}
-
-    .gallery-start {
-        /* display: flex;
-        justify-content: center;
-        align-items: center; */
-        padding: 0;
-        margin-top: 3rem;
-
-    }
-
-    .gallery-start div {
-        margin: auto;
-    }
-
-    .gallery-cards {
-        margin: 0;
-        /* text-align: left; */
-        /* display: grid; */
-        grid-template-columns: 1fr;
-    }
-
-    .photo {
-        max-width: 60rem;
-    }
-
-    .photo img {
-        max-width: 60rem;
-        max-height: 95rem;
-        border-radius: 2px;
-    }
-
-
-
+.family-plans{
+    padding-top: 15vh;
+    padding-bottom: 40vh;
+    
+}
+   
 }
